--- a/templates/blogs/detail.html
+++ b/templates/blogs/detail.html
@@ -14,7 +14,7 @@
 																	  datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
 							<span class="post-author"><a href="#">{{ post.author }}</a></span>
 							<span class="comments-link"><a href="#comment-area">{{ post.comment_set.count }} 评论</a></span>
-                            <span class="views-count"><a href="#">588 阅读</a></span>
+                            <span class="views-count"><a href="#">{{ post.viewers }} 阅读</a></span>
                         </div>
                     </header>
                     <div class="entry-content clearfix">
@@ -42,7 +42,7 @@
 								{{ form.url }}
 								{{ form.url.errors }}
 							</div>
-							<div class="col-md-4">
+							<div class="col-md-12">
 								<label for="{{ form.text.id_for_label }}">评论：</label>
 								{{ form.text }}
 								{{ form.text.errors }}
