--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,8 @@
                     <ul>
 						{% for category in category_list %}
                         <li>
-							<a href="{% url 'blogs:category' category.pk %}">{{ category.name }} <span class="post-count">(13)</span></a>
+							<a href="{% url 'blogs:category' category.pk %}">
+                                {{ category.name }} <span class="post-count">({{ category.post_set.count }})</span></a>
                         </li>
 						{% empty %}
 						<p>暂无标签</p>
