--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -16,7 +16,7 @@
 														datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
 					<span class="post-author"><a href="#">{{ post.author }}</a></span>
 					<span class="comments-link"><a href="{% url 'blogs:detail' post.pk %}#comment-area">{{ post.comment_set.count }} 评论</a></span>
-                    <span class="views-count"><a href="{% url 'blogs:detail' post.pk %}">588 阅读</a></span>
+                    <span class="views-count"><a href="{% url 'blogs:detail' post.pk %}">{{ post.viewers }} 阅读</a></span>
                 </div>
             </header>
             <div class="entry-content clearfix">
