--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="{% static 'blogs/css/pace.css' %}">
 	<link rel="stylesheet" href="{% static 'blogs/css/custom.css' %}">
 	<link rel="stylesheet" href="{% static 'blogs/css/highlights/tango.css' %}">
+    <link rel="stylesheet" href="{% static 'blogs/css/mine.css' %}">
 
     <!-- js -->
 	<script src="{% static 'blogs/js/jquery-2.1.3.min.js' %}"></script>
@@ -53,8 +54,9 @@
                 <div id="header-search-box">
                     <a id="search-menu" href="#"><span id="search-icon" class="ion-ios-search-strong"></span></a>
                     <div id="search-form" class="search-form">
-                        <form role="search" method="get" id="searchform" action="#">
-                            <input type="search" placeholder="搜索" required>
+                        <form role="search" method="get"
+                            id="searchform"action="{% url 'haystack_search' %}">
+                            <input type="search" name='q' placeholder="搜索" required>
                             <button type="submit"><span class="ion-ios-search-strong"></span></button>
                         </form>
                     </div>
@@ -110,51 +112,30 @@
 						{% for category in category_list %}
                         <li>
 							<a href="{% url 'blogs:category' category.pk %}">
-                                {{ category.name }} <span class="post-count">({{ category.post_set.count }})</span></a>
+                                {{ category.name }} <span
+                                    class="post-count">({{ category.num_posts }})</span></a>
                         </li>
 						{% empty %}
-						<p>暂无标签</p>
+						<p>暂无分类</p>
 						{% endfor %}
                     </ul>
                 </div>
 
                 <div class="widget widget-tag-cloud">
+                    {% get_tags as tag_list %}
                     <h3 class="widget-title">标签云</h3>
                     <ul>
+                        {% for tag in tag_list %}
                         <li>
-                            <a href="#">Django</a>
+                            <a href="{% url 'blogs:tag' tag.pk %}">{{ tag.name}}</a>
                         </li>
-                        <li>
-                            <a href="#">Python</a>
-                        </li>
-                        <li>
-                            <a href="#">Java</a>
-                        </li>
-                        <li>
-                            <a href="#">笔记</a>
-                        </li>
-                        <li>
-                            <a href="#">文档</a>
-                        </li>
-                        <li>
-                            <a href="#">AngularJS</a>
-                        </li>
-                        <li>
-                            <a href="#">CSS</a>
-                        </li>
-                        <li>
-                            <a href="#">JavaScript</a>
-                        </li>
-                        <li>
-                            <a href="#">Snippet</a>
-                        </li>
-                        <li>
-                            <a href="#">jQuery</a>
-                        </li>
+                        {% empty %}
+                        <p>暂无标签</p>
+                        {% endfor %}
                     </ul>
                 </div>
                 <div class="rss">
-                    <a href=""><span class="ion-social-rss-outline"></span> RSS 订阅</a>
+                    <a href="{% url 'rss' %}"><span class="ion-social-rss-outline"></span> RSS 订阅</a>
                 </div>
             </aside>
         </div>
