--- a/templates/blogs/detail.html
+++ b/templates/blogs/detail.html
@@ -21,6 +21,18 @@
                      	{{ post.body|safe }}
                     </div>
                 </article>
+                <div class="post-tags">
+                    {% if post.tags.all %}
+                    <span>标签：</span>
+                    {% endif %}
+                    <ul class="list-inline">
+                        {% for tag in post.tags.all %}
+                        <li class="list-inline-item">
+                        <a href="{% url 'blogs:tag' tag.pk %}">{{tag.name}}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
                 <section class="comment-area" id="comment-area">
                     <hr>
                     <h3>发表评论</h3>
@@ -72,22 +84,6 @@
 {% block toc %}
                 <div class="widget widget-content">
                     <h3 class="widget-title">文章目录</h3>
-                    <ul>
-                        <li>
-                            <a href="#">教程特点</a>
-                        </li>
-                        <li>
-                            <a href="#">谁适合这个教程</a>
-                        </li>
-                        <li>
-                            <a href="#">在线预览</a>
-                        </li>
-                        <li>
-                            <a href="#">资源列表</a>
-                        </li>
-                        <li>
-                            <a href="#">获取帮助</a>
-                        </li>
-                    </ul>
+                    {{ post.toc|safe }}
                 </div>
 {% endblock toc %} 
