--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -1,36 +1,42 @@
 {% extends 'base.html' %}
+{% load highlight %}
+
 {% block title %}
-<title>{{ title }}</title>
+<title>搜索<title>
 {% endblock %}
 
 {% block main %}
-{% if error_msg %}
-<p class="error">{{ error_msg }}</p>
-{% endif %}
-	{% for post in post_list %}
-		<article class="post post-{{ post.pk }}">
+{% if query %}
+	{% for result in page.object_list %}
+		<article class="post post-{{ result.object.pk }}">
             <header class="entry-header">
                 <h1 class="entry-title">
-					<a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+					<a href="{{ result.object.get_absolute_url }}">
+                        {% highlight result.object.title with query %}</a>
                 </h1>
                 <div class="entry-meta">
-					<span class="post-category"><a href="{% url 'blogs:category' post.category.pk %}">{{ post.category.name }}</a></span>
-					<span class="post-date"><a href="{% url 'blogs:archives' post.created_time.year post.created_time.month %}"><time class="entry-date"
-														datetime="{{ post.created_time }}">{{ post.created_time }}</time></a></span>
-					<span class="post-author"><a href="#">{{ post.author }}</a></span>
-					<span class="comments-link"><a href="{% url 'blogs:detail' post.pk %}#comment-area">{{ post.comment_set.count }} 评论</a></span>
-                    <span class="views-count"><a href="{% url 'blogs:detail' post.pk %}">{{ post.viewers }} 阅读</a></span>
+					<span class="post-category"><a href="{% url 'blogs:category' result.object.category.pk %}">
+                            {{ result.object.category.name }}</a></span>
+					<span class="post-date">
+                        <a href="{% url 'blogs:archives' result.object.created_time.year result.object.created_time.month %}">
+                            <time class="entry-date" datetime="{{ result.object.created_time }}">
+                                {{ result.objcet.created_time }}</time></a></span>
+					<span class="post-author"><a href="#">{{ result.objet.author }}</a></span>
+					<span class="comments-link"><a href="{% url 'blogs:detail' result.object.pk %}#comment-area">
+                            {{ result.object.comment_set.count }} 评论</a></span>
+                    <span class="views-count"><a href="{% url 'blogs:detail' result.object.pk %}">
+                            {{ result.object.viewers }} 阅读</a></span>
                 </div>
             </header>
             <div class="entry-content clearfix">
-				<p>{{ post.excerpt }}</p>
+				<p>{{ result.object.excerpt }}</p>
                 <div class="read-more cl-effect-14">
-					<a href="{{ post.get_absolute_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
+					<a href="{{ result.object.get_absolute_url }}" class="more-link">继续阅读 <span class="meta-nav">→</span></a>
                 </div>
             </div>
         </article>
 	{% empty %}
-		<div class="no-post">暂时还没有发表的文章</div>
+		<div class="no-post">没有搜索到你想要的结果！</div>
 	{% endfor %}
 
 <!--
@@ -81,4 +87,7 @@
         {% endif %}
         </div>
     {% endif %}
+{% else %}
+<p>请输入关键词，例如python</p>
+{% endif %}
 {% endblock main %}
