--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 	{% block title %}
-	{% endblock %}
+	{% endblock title %}
 
     <!-- meta -->
     <meta charset="UTF-8">
@@ -17,6 +17,12 @@
 	<link rel="stylesheet" href="{% static 'blogs/css/custom.css' %}">
 	<link rel="stylesheet" href="{% static 'blogs/css/highlights/tango.css' %}">
     <link rel="stylesheet" href="{% static 'blogs/css/mine.css' %}">
+
+    <style>
+        span.highlighted {
+            color: red;
+        }
+    </style>
 
     <!-- js -->
 	<script src="{% static 'blogs/js/jquery-2.1.3.min.js' %}"></script>
