--- a/templates/blogs/detail.html
+++ b/templates/blogs/detail.html
@@ -2,7 +2,7 @@
 
 {% block title %}
 <title>{{ title }}</title>
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 <article class="post post-{{ post.pk }}">
