--- a/templates/blogs/index.html
+++ b/templates/blogs/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}
 <title>{{ title }}</title>
-{% endblock %}
+{% endblock title %}
 
 {% block main %}
 {% if error_msg %}
